deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: service-config-center
spec:
  template: 
    metadata:
      labels:
        name: service-config-center
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
        - name: service-config-center
          image: service-config-center-runtime-image:latest
          forcePull: true 
          ports:
            - containerPort: 8080
              protocol: TCP
  replicas: 1
  triggers:
    - type: ConfigChange 
    - type: ImageChange
      imageChangeParams:
        containerNames:
          - service-config-center
        from:
          kind: ImageStreamTag
          name: service-config-center-runtime-image:latest
        forcePull: true 
  strategy: 
    type: Rolling
  paused: false 
  revisionHistoryLimit: 2 
  minReadySeconds: 0
