route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: service-config-center-route
  labels:
    name: service-config-center-route
spec:
  host: service-config-center.apps.felix.com
  to:
    kind: Service
    name: service-config-center-svc
    weight: 100
  wildcardPolicy: None
